--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "dotenv": "^10.0.0",
     "express": "^4.16.3",
+    "express-graphql": "^0.12.0",
     "express-validator": "^5.3.0",
+    "graphql": "^15.5.1",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
     "multer": "^1.4.0",
